// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Row Action Bar 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr",
      "justifyItems": "left",
      "maxWidth": "50vw",
    }
  }
>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        One Action
      </div>
    </div>
    <div
      className="psds-row__action-bar"
    >
      <button
        className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-flat psds-theme--dark psds-button--icon-only"
        disabled={false}
      >
        <div
          className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-small psds-button__icon--icon-only"
        >
          <div
            className="psds-icon psds-icon--size-small"
          >
            <svg
              aria-label="bookmark icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
              />
            </svg>
          </div>
        </div>
        <span
          aria-hidden={false}
          className="psds-button__text"
        />
      </button>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        Long Title - Amazingly, the Longest Title in the World Because It's Known That If You Give Room For This Kind of a Title, It Will Definitely Come to Pass 2000
      </div>
    </div>
    <div
      className="psds-row__action-bar"
    >
      <button
        className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-flat psds-theme--dark psds-button--icon-only"
        disabled={false}
      >
        <div
          className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-small psds-button__icon--icon-only"
        >
          <div
            className="psds-icon psds-icon--size-small"
          >
            <svg
              aria-label="bookmark icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
              />
            </svg>
          </div>
        </div>
        <span
          aria-hidden={false}
          className="psds-button__text"
        />
      </button>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        Long Title with Image - Amazingly, the Longest Title in the World Because It's Known That If You Give Room For This Kind of a Title, It Will Definitely Come to Pass 2000
      </div>
    </div>
    <div
      className="psds-row__action-bar"
    >
      <button
        className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-flat psds-theme--dark psds-button--icon-only"
        disabled={false}
      >
        <div
          className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-small psds-button__icon--icon-only"
        >
          <div
            className="psds-icon psds-icon--size-small"
          >
            <svg
              aria-label="bookmark icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
              />
            </svg>
          </div>
        </div>
        <span
          aria-hidden={false}
          className="psds-button__text"
        />
      </button>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        Locked Visible
      </div>
    </div>
    <div
      className="psds-row__action-bar psds-row__action-bar--actionBarVisible"
    >
      <button
        className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-flat psds-theme--dark psds-button--icon-only"
        disabled={false}
      >
        <div
          className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-small psds-button__icon--icon-only"
        >
          <div
            className="psds-icon psds-icon--size-small"
          >
            <svg
              aria-label="bookmark icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
              />
            </svg>
          </div>
        </div>
        <span
          aria-hidden={false}
          className="psds-button__text"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Row Combo 1`] = `
<div
  className="psds-row psds-theme--dark"
>
  <div
    className="psds-row__words"
    style={
      Object {
        "maxWidth": "calc(100% - 0px - (3 * 24px + 3 * 8px))",
      }
    }
  >
    <div
      className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
    >
      <span
        className="psds-row__text-link psds-row__text-link psds-theme--dark"
      >
        <a
          href="http://google.com?query=title"
        >
          Image, Progress, Link Full Overlay, Icon, Link Title, Link Meta1, 2, Action Bar, and More Really. Why Not Put More In? Release a New Edition Every Year With All the Excesses of our VC Budget? Boundless Features Will Be Yours 2000
        </a>
      </span>
    </div>
    <div
      className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
    >
      <span
        className="psds-row__metadata__datum"
      >
        <span
          className="psds-row__text-link psds-row__text-link psds-theme--dark"
        >
          <a
            href="http://google.com/?query=jaketrent"
          >
            It is impossible to count the grand contributions of this great author
          </a>
        </span>
      </span>
      <span
        aria-hidden={true}
        className="psds-row__metadata__dot"
      >
        ·
      </span>
      <span
        className="psds-row__metadata__datum"
      >
        <span
          className="psds-row__text-link psds-row__text-link psds-theme--dark"
        >
          <a
            href="http://google.com/?query=jaketrent"
          >
            Levels heretofore unknown in the battle for truth and knowledge
          </a>
        </span>
      </span>
      <span
        aria-hidden={true}
        className="psds-row__metadata__dot"
      >
        ·
      </span>
      <span
        className="psds-row__metadata__datum"
      >
        <span
          className="psds-row__text-link psds-row__text-link psds-theme--dark"
        >
          <a
            href="http://google.com/?query=jaketrent"
          >
            A length of such amazing lengthitude so-as to blow the mind
          </a>
        </span>
      </span>
    </div>
    <div
      className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
    >
      <span
        className="psds-row__metadata__datum"
      >
        Goodness me!
      </span>
    </div>
  </div>
  <div
    className="psds-row__action-bar psds-row__action-bar--fullOverlay psds-row__action-bar--actionBarVisible"
  >
    <button
      className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-flat psds-theme--dark psds-button--icon-only"
      disabled={false}
    >
      <div
        className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-small psds-button__icon--icon-only"
      >
        <div
          className="psds-icon psds-icon--size-small"
        >
          <svg
            aria-label="bookmark icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
            />
          </svg>
        </div>
      </div>
      <span
        aria-hidden={false}
        className="psds-button__text"
      />
    </button>
    <button
      className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-flat psds-theme--dark psds-button--icon-only"
      disabled={false}
    >
      <div
        className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-small psds-button__icon--icon-only"
      >
        <div
          className="psds-icon psds-icon--size-small"
        >
          <svg
            aria-label="gear icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M4 12c0-.377.026-.748.077-1.111L2.274 9.848a.5.5 0 01-.183-.683l2.5-4.33a.5.5 0 01.683-.183l1.804 1.041A7.988 7.988 0 019 4.581V2.5a.5.5 0 01.5-.5h5a.5.5 0 01.5.5v2.082a7.99 7.99 0 011.922 1.112l1.805-1.042a.5.5 0 01.683.183l2.5 4.33a.5.5 0 01-.183.683l-1.804 1.042a8.063 8.063 0 010 2.22l1.804 1.042a.5.5 0 01.183.683l-2.5 4.33a.5.5 0 01-.683.183l-1.805-1.042A7.992 7.992 0 0115 19.418V21.5a.5.5 0 01-.5.5h-5a.5.5 0 01-.5-.5v-2.081a7.985 7.985 0 01-1.923-1.112l-1.804 1.041a.5.5 0 01-.683-.183l-2.5-4.33a.5.5 0 01.183-.683l1.803-1.04A8.077 8.077 0 014 12zm9-8h-2v2.083a5.994 5.994 0 00-3.623 2.092L5.573 7.133l-1 1.732 1.803 1.04A5.986 5.986 0 006 12c0 .736.132 1.44.375 2.092l-1.803 1.041 1 1.732 1.804-1.041A5.993 5.993 0 0011 17.917V20h2v-2.083a5.994 5.994 0 003.625-2.094l1.805 1.042 1-1.732-1.805-1.042A5.987 5.987 0 0018 12a5.99 5.99 0 00-.375-2.093l1.804-1.042-1-1.732-1.806 1.042A5.994 5.994 0 0013 6.083V4zm-5 8a4 4 0 108 0 4 4 0 00-8 0zm4 2a2 2 0 100-4 2 2 0 000 4z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
      <span
        aria-hidden={false}
        className="psds-button__text"
      />
    </button>
    <button
      className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-flat psds-theme--dark psds-button--icon-only"
      disabled={false}
    >
      <div
        className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-small psds-button__icon--icon-only"
      >
        <div
          className="psds-icon psds-icon--size-small"
        >
          <svg
            aria-label="more icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
            />
          </svg>
        </div>
      </div>
      <span
        aria-hidden={false}
        className="psds-button__text"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Row Full Overlay 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr",
      "justifyItems": "left",
      "maxWidth": "50vw",
    }
  }
>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        Element
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        Link
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        Icon Link
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        Both Icon and Image Have Separate Click Targets
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Row Images 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr",
      "justifyItems": "left",
    }
  }
>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        With Image
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
      >
        <span
          className="psds-row__metadata__datum"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        With Image And Overlay
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
      >
        <span
          className="psds-row__metadata__datum"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        Linked Image
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
      >
        <span
          className="psds-row__metadata__datum"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        Wide Image
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
      >
        <span
          className="psds-row__metadata__datum"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        Tall Image
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
      >
        <span
          className="psds-row__metadata__datum"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        Small Image
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
      >
        <span
          className="psds-row__metadata__datum"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        No Image
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
      >
        <span
          className="psds-row__metadata__datum"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        No Image, With Overlay (Not Shown)
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
      >
        <span
          className="psds-row__metadata__datum"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Row Metadata 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr",
      "justifyItems": "left",
    }
  }
>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        Meta with Strings
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
      >
        <span
          className="psds-row__metadata__datum"
        >
          Jake Trent
        </span>
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        Meta With Links
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
      >
        <span
          className="psds-row__metadata__datum"
        >
          <span
            className="psds-row__text-link psds-row__text-link psds-theme--dark"
          >
            <a
              href="http://google.com/?query=jaketrent"
            >
              Jake Trent
            </a>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        The Longest Strings in El Mundo
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
      >
        <span
          className="psds-row__metadata__datum"
        >
          It is impossible to count the grand contributions of this great author
        </span>
        <span
          aria-hidden={true}
          className="psds-row__metadata__dot"
        >
          ·
        </span>
        <span
          className="psds-row__metadata__datum"
        >
          Levels heretofore unknown in the battle for truth and knowledge
        </span>
        <span
          aria-hidden={true}
          className="psds-row__metadata__dot"
        >
          ·
        </span>
        <span
          className="psds-row__metadata__datum"
        >
          A length of such amazing lengthitude so-as to blow the mind
        </span>
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        Long Strings AND Los Imagereo
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
      >
        <span
          className="psds-row__metadata__datum"
        >
          It is impossible to count the grand contributions of this great author
        </span>
        <span
          aria-hidden={true}
          className="psds-row__metadata__dot"
        >
          ·
        </span>
        <span
          className="psds-row__metadata__datum"
        >
          Levels heretofore unknown in the battle for truth and knowledge
        </span>
        <span
          aria-hidden={true}
          className="psds-row__metadata__dot"
        >
          ·
        </span>
        <span
          className="psds-row__metadata__datum"
        >
          A length of such amazing lengthitude so-as to blow the mind
        </span>
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        Long Strings AND Los Imagereo
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
      >
        <span
          className="psds-row__metadata__datum"
        >
          This string is so long, it should be illegal.This string is so long, it should be illegal.This string is so long, it should be illegal.   This string is so long, it should be illegal. 
        </span>
        <span
          aria-hidden={true}
          className="psds-row__metadata__dot"
        >
          ·
        </span>
        <span
          className="psds-row__metadata__datum"
        >
          This is still visible
        </span>
        <span
          aria-hidden={true}
          className="psds-row__metadata__dot"
        >
          ·
        </span>
        <span
          className="psds-row__metadata__datum"
        >
          And so is this
        </span>
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        Meta With Links
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
      >
        <span
          className="psds-row__metadata__datum"
        >
          <span
            className="psds-row__text-link psds-row__text-link psds-theme--dark"
          >
            <a
              href="http://google.com/?query=jaketrent"
            >
              It is impossible to count the grand contributions of this great author
            </a>
          </span>
        </span>
        <span
          aria-hidden={true}
          className="psds-row__metadata__dot"
        >
          ·
        </span>
        <span
          className="psds-row__metadata__datum"
        >
          <span
            className="psds-row__text-link psds-row__text-link psds-theme--dark"
          >
            <a
              href="http://google.com/?query=jaketrent"
            >
              Levels heretofore unknown in the battle for truth and knowledge
            </a>
          </span>
        </span>
        <span
          aria-hidden={true}
          className="psds-row__metadata__dot"
        >
          ·
        </span>
        <span
          className="psds-row__metadata__datum"
        >
          <span
            className="psds-row__text-link psds-row__text-link psds-theme--dark"
          >
            <a
              href="http://google.com/?query=jaketrent"
            >
              A length of such amazing lengthitude so-as to blow the mind
            </a>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        2 Lines
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
      >
        <span
          className="psds-row__metadata__datum"
        >
          Jake Trent
        </span>
        <span
          aria-hidden={true}
          className="psds-row__metadata__dot"
        >
          ·
        </span>
        <span
          className="psds-row__metadata__datum"
        >
          School of the Internet
        </span>
        <span
          aria-hidden={true}
          className="psds-row__metadata__dot"
        >
          ·
        </span>
        <span
          className="psds-row__metadata__datum"
        >
          Blasted Good
        </span>
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
      >
        <span
          className="psds-row__metadata__datum"
        >
          Certified GMO-free
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Row Progress 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr",
      "justifyItems": "left",
    }
  }
>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__overlays"
    >
      <div
        className="psds-row__image"
        style={
          Object {
            "backgroundImage": "url(//picsum.photos/680/320?image=42&gravity=north)",
          }
        }
      />
    </div>
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - (96px + 24px) - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-medium psds-row__title psds-theme--dark"
      >
        0 progress
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__overlays"
    >
      <div
        className="psds-row__image"
        style={
          Object {
            "backgroundImage": "url(//picsum.photos/680/320?image=42&gravity=north)",
          }
        }
      />
      <div
        className="psds-row__progress"
      >
        <div
          aria-label="67% complete"
          className="psds-row__progress__bar"
          style={
            Object {
              "width": "67%",
            }
          }
        />
      </div>
    </div>
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - (96px + 24px) - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-medium psds-row__title psds-theme--dark"
      >
        66.6667 progress
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__overlays"
    >
      <div
        className="psds-row__image"
        style={
          Object {
            "backgroundImage": "url(//picsum.photos/680/320?image=42&gravity=north)",
          }
        }
      />
      <div
        className="psds-row__progress"
      >
        <div
          aria-label="100% complete"
          className="psds-row__progress__bar psds-row__progress__bar--complete"
          style={
            Object {
              "width": "100%",
            }
          }
        />
      </div>
    </div>
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - (96px + 24px) - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-medium psds-row__title psds-theme--dark"
      >
        100 progress
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-medium psds-row__title psds-theme--dark"
      >
        No image, with progress (not shown)
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Row Sizes 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr",
      "justifyItems": "left",
      "maxWidth": "50vw",
    }
  }
>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        small Row
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
      >
        <span
          className="psds-row__metadata__datum"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        small With the Longest Title in the World Because It's Known That If You Give Room For This Kind of a Title, It Will Definitely Come to Pass 2000
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
      >
        <span
          className="psds-row__metadata__datum"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__overlays"
    >
      <div
        className="psds-row__image"
        style={
          Object {
            "backgroundImage": "url(//picsum.photos/680/320?image=42&gravity=north)",
          }
        }
      />
    </div>
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - (96px + 24px) - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-medium psds-row__title psds-theme--dark"
      >
        medium Row
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-medium"
      >
        <span
          className="psds-row__metadata__datum"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__overlays"
    >
      <div
        className="psds-row__image"
        style={
          Object {
            "backgroundImage": "url(//picsum.photos/680/320?image=42&gravity=north)",
          }
        }
      />
    </div>
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - (96px + 24px) - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-medium psds-row__title psds-theme--dark"
      >
        medium With the Longest Title in the World Because It's Known That If You Give Room For This Kind of a Title, It Will Definitely Come to Pass 2000
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-medium"
      >
        <span
          className="psds-row__metadata__datum"
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Row Stack Of Rows 1`] = `
Array [
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        Course thing you do
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
      >
        <span
          className="psds-row__metadata__datum"
        >
          1m 46s
        </span>
      </div>
    </div>
    <div
      className="psds-row__action-bar psds-row__action-bar--actionBarVisible"
    >
      <button
        className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-flat psds-theme--dark psds-button--icon-only"
        disabled={false}
      >
        <div
          className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-small psds-button__icon--icon-only"
        >
          <div
            className="psds-icon psds-icon--size-small"
          >
            <svg
              aria-label="more icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
              />
            </svg>
          </div>
        </div>
        <span
          aria-hidden={false}
          className="psds-button__text"
        />
      </button>
    </div>
  </div>,
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        Course thing you do
      </div>
      <div
        className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-small"
      >
        <span
          className="psds-row__metadata__datum"
        >
          1m 46s
        </span>
      </div>
    </div>
    <div
      className="psds-row__action-bar psds-row__action-bar--actionBarVisible"
    >
      <button
        className="psds-button psds-button--layout-inline psds-button--size-small psds-button--appearance-flat psds-theme--dark psds-button--icon-only"
        disabled={false}
      >
        <div
          className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-small psds-button__icon--icon-only"
        >
          <div
            className="psds-icon psds-icon--size-small"
          >
            <svg
              aria-label="more icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
              />
            </svg>
          </div>
        </div>
        <span
          aria-hidden={false}
          className="psds-button__text"
        />
      </button>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/Row Titles 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr",
      "justifyItems": "left",
    }
  }
>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        A String Title
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "maxWidth": 400,
      }
    }
  >
    <div
      className="psds-row psds-theme--dark"
    >
      <div
        className="psds-row__words"
        style={
          Object {
            "maxWidth": "calc(100% - 0px - 0px)",
          }
        }
      >
        <div
          className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
        >
          <div>
            String trucated - We'll have a super time. You can create the world you want to see and be a part of. You have that power. These things happen automatically. All you have to do is just let them happen. Only think about one thing at a time. Don't get greedy.
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="psds-row psds-theme--dark"
  >
    <div
      className="psds-row__words"
      style={
        Object {
          "maxWidth": "calc(100% - 0px - 0px)",
        }
      }
    >
      <div
        className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
      >
        <span
          className="psds-row__text-link psds-row__text-link psds-theme--dark"
        >
          <a
            href="http://google.com"
          >
            A Link Title
          </a>
        </span>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "maxWidth": 400,
      }
    }
  >
    <div
      className="psds-row psds-theme--dark"
    >
      <div
        className="psds-row__words"
        style={
          Object {
            "maxWidth": "calc(100% - 0px - 0px)",
          }
        }
      >
        <div
          className="psds-row__title psds-row__title--size-small psds-row__title psds-theme--dark"
        >
          <span
            className="psds-row__text-link psds-row__text-link psds-theme--dark"
          >
            <a
              href="http://google.com"
            >
              <div>
                Link truncated - We'll have a super time. You can create the world you want to see and be a part of. You have that power. These things happen automatically. All you have to do is just let them happen. Only think about one thing at a time. Don't get greedy.
              </div>
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
